--- a/cart.html
+++ b/cart.html
@@ -73,9 +73,9 @@
 					</div>
 					<p class="product-size">Small</p>
 					<div>
-						<button aria-label="remove">-</button>
+						<button aria-label="button remove quantity item1">-</button>
 							<span class="product-quantity">1</span>
-						<button aria-label="add">+</button>
+						<button aria-label="button add quantity item1">+</button>
 					</div>
 					<p class="product-price">$45</p>
 				</div>
@@ -87,9 +87,9 @@
 					</div>
 					<p class="product-size">Small</p>
 					<div>
-						<button aria-label="remove">-</button>
+						<button aria-label="button remove quantity item2 ">-</button>
 							<span class="product-quantity">1</span>
-						<button aria-label="add">+</button>
+						<button aria-label="button add quantity item2">+</button>
 					</div>
 					<p class="product-price">$9.99</p>
 				</div>
@@ -114,9 +114,7 @@
 						<p>$54.99</p>
 					</div>
 					<div class="right-align">
-						<a href="shipping-details.html">
-							<button type="button" class="btn-main">Check Out</button>
-						</a>
+						<a class="btn-main" href="shipping-details.html">Check Out</a>
 				</div>
 				</div>
 			</div>
