--- a/citations.html
+++ b/citations.html
@@ -99,7 +99,7 @@
 
 					<li>Spratt, Annie. Floral wrapped in silverware on plate [Photo]. Retrieved from <a href="https://unsplash.com/photos/uDoDaHA_mH8">https://unsplash.com/photos/uDoDaHA_mH8</a></li>
 
-					<li>Social Media Icons. Retrieved from <a href="fontawesome.com">fontawesome.com</a></li>	
+					<li>Social Media Icons. Retrieved from <a href="https://fontawesome.com/v4.7.0/icons/">https://fontawesome.com/v4.7.0/icons</a></li>	
 				
 				</ul>
 
