--- a/full-service-form-2of5.html
+++ b/full-service-form-2of5.html
@@ -59,25 +59,25 @@
 				<form action="/action_page.php">
 					<div class="grid-col-1of2">
 							<div class="name-item">
-								<label for="date">Date</label>
-								<input type="text" id="date" name="date" placeholder="DD/MM/YYYY">
+								<label for="c-date">Date</label>
+								<input type="text" id="c-date" name="c-date" placeholder="DD/MM/YYYY">
 							</div>
 
 
 							<div class="name-item">
-								<label for="time">Time</label>
-								<input type="text" id="time" name="time" placeholder="00:00 AM/PM">
+								<label for="c-time">Time</label>
+								<input type="text" id="c-time" name="c-time" placeholder="00:00 AM/PM">
 							</div>
 					</div>
 
 					<div class="grid-col-1of1">
-						<label for="venue-name">Name of Venue</label>
-				  		<input type="text" id="venue-name" name="venue-name">
+						<label for="c-venue-name">Name of Venue</label>
+				  		<input type="text" id="c-venue-name" name="c-venue-name">
 			  		</div>
 
 			  		<div class="grid-col-1of1">
-				  		<label for="location">Location of Venue</label>
-				  		<input type="text" id="location" name="location">
+				  		<label for="c-location">Location of Venue</label>
+				  		<input type="text" id="c-location" name="c-location">
 			  		</div>
 				</form>
 			</div>
@@ -87,25 +87,25 @@
 				<form action="/action_page.php">
 					<div class="grid-col-1of2">
 							<div class="name-item">
-								<label for="date">Date</label>
-								<input type="text" id="date" name="date" placeholder="DD/MM/YYYY">
+								<label for="r-date">Date</label>
+								<input type="text" id="r-date" name="r-date" placeholder="DD/MM/YYYY">
 							</div>
 
 
 							<div class="name-item">
-								<label for="time">Time</label>
-								<input type="text" id="time" name="time" placeholder="00:00 AM/PM">
+								<label for="r-time">Time</label>
+								<input type="text" id="r-time" name="r-time" placeholder="00:00 AM/PM">
 							</div>
 					</div>
 
 					<div class="grid-col-1of1">
-						<label for="venue-name">Name of Venue</label>
-				  		<input type="text" id="venue-name" name="venue-name">
+						<label for="r-venue-name">Name of Venue</label>
+				  		<input type="text" id="r-venue-name" name="r-venue-name">
 			  		</div>
 
 			  		<div class="grid-col-1of1">
-				  		<label for="location">Location of Venue</label>
-				  		<input type="text" id="location" name="location">
+				  		<label for="r-location">Location of Venue</label>
+				  		<input type="text" id="r-location" name="r-location">
 			  		</div>
 
 			  		<div class="grid-col-1of1 buttons">
@@ -114,9 +114,7 @@
 							</div>
 
 						<div class="right-align">
-							<a href="full-service-form-3of5.html">
-								<button type="button" class="btn-main">ART DIRECTION</button>
-							</a>
+							<a class="btn-main" href="full-service-form-3of5.html">ART DIRECTION</a>
 						</div>
 					</div>
 					
@@ -152,7 +150,7 @@
 			 </div>
 
 			 <div class="child-footer mailing-list">
-				 <label><h3>GET THE DIRT</h3></label>
+				 <label>GET THE DIRT</label>
 				 <p>No spam. Just great content.</p>
 				 <input type="text" id="email" name="email" placeholder='name@domain.com'>
 				 <button aria-label="type email address" type="button" class="btn-submit">→</button>
