--- a/full-service-form-3of5.html
+++ b/full-service-form-3of5.html
@@ -59,7 +59,7 @@
 				<form action="/action_page.php">
 					<div class="grid-col-1of1 art-desc">
 							<div class="name-item">
-								<label for="date">Describe the mood, style, and/or colour palette</label>
+								<label for="desc">Describe the mood, style, and/or colour palette</label>
 								<textarea id="review-body" name="review-body" rows="4" cols="50" placeholder="Eg. Farmhouse wedding with pastel-coloured floral arrangements and theme..."></textarea>
 							</div>
 					</div>
@@ -71,9 +71,7 @@
 						</div>
 
 						<div class="right-align">
-							<a href="full-service-form-4of5.html">
-								<button type="button" class="btn-main">BUDGET</button>
-							</a>
+							<a class="btn-main" href="full-service-form-4of5.html">BUDGET</a>
 						</div>
 					</div>
 
@@ -108,7 +106,7 @@
 			 </div>
 
 			 <div class="child-footer mailing-list">
-				 <label><h3>GET THE DIRT</h3></label>
+				 <label>GET THE DIRT</label>
 				 <p>No spam. Just great content.</p>
 				 <input type="text" id="email" name="email" placeholder='name@domain.com'>
 				 <button aria-label="type email address" type="button" class="btn-submit">→</button>
