--- a/full-service-form-4of5.html
+++ b/full-service-form-4of5.html
@@ -59,12 +59,12 @@
 				<form action="/action_page.php">
 					
 					<div class="grid-col-1of1 budget">
-						<label for="phone-number">What is your estimated budget?</label>
-						 <select id="contact" name="contact">
-						    <option value="email">Under $1000</option>
-						    <option value="phone">$1000-$3000</option>
-						    <option value="phone">$3001-$5000</option>
-						     <option value="phone">Over $5000</option>
+						<label for="budget">What is your estimated budget?</label>
+						 <select id="budget" name="budget">
+						    <option value="1">Under $1000</option>
+						    <option value="2">$1000-$3000</option>
+						    <option value="3">$3001-$5000</option>
+						     <option value="4">Over $5000</option>
 	 					 </select>
  					</div>
 
@@ -74,11 +74,8 @@
 								</a>
 						</div>
 
-
 						<div class="right-align">
-							<a href="full-service-form-5of5.html">
-								<button type="button" class="btn-main">SUBMIT FORM</button>
-								</a>
+							<a class="btn-main" href="full-service-form-5of5.html">SUBMIT FORM</a>
 						</div>
 					</div>
 
@@ -113,7 +110,7 @@
 			 </div>
 
 			 <div class="child-footer mailing-list">
-				 <label><h3>GET THE DIRT</h3></label>
+				 <label>GET THE DIRT</label>
 				 <p>No spam. Just great content.</p>
 				 <input type="text" id="email" name="email" placeholder='name@domain.com'>
 				 <button aria-label="type email address" type="button" class="btn-submit">→</button>
