--- a/shop-plants.html
+++ b/shop-plants.html
@@ -68,8 +68,8 @@
 					  	 <img src="img/products/mong-bui.jpg" alt="Photo of an aloe succulent">
 					  	 	 <p class="product-name">Aloe Succulent</p>
 						 	 <p class ="price">from $9.99</p>
-						 	 <a class ="btn-add" href="cart.html"> + Add </a>
 				 	</a>
+				 	 <a class ="btn-add" href="cart.html"> + Add </a>
 				</div>
 
 				<div class ="product-item col-2of3">
@@ -77,8 +77,8 @@
 					  	 <img src="img/products/alex-loup.jpg" alt="Photo of eucalyptus">
 					  	  <p class="product-name">Eucalyptus</p>
 						  <p class ="price">from 12.99</p>
-						  <a class ="btn-add" href="cart.html"> + Add </a>
 					</a>
+					<a class ="btn-add" href="cart.html"> + Add </a>
 
 				</div>
 
@@ -87,28 +87,28 @@
 					  	 <img src="img/products/charles-deluvio.jpg" alt="Photo of light pink bouquet">
 					  	  <p class="product-name">Cactus</p>
 						  <p class ="price">from 5.99</p>
-						  <a class ="btn-add" href="cart.html"> + Add </a>
 					</a>
+					<a class ="btn-add" href="cart.html"> + Add </a>
 				</div>
 		</section>
 
 		<!----- Footer----->
 		 <footer class="main-footer grid">
 			 <div class="child-footer about">
-				 <h3>ABOUT FOUR SEASONS FLORAL</h3>
+				 <h1>ABOUT FOUR SEASONS FLORAL</h1>
 				 <p>We are a family-owned and full-service floral shop based in Vancouver, BC. that creates bespoke floral arrangements.
 			 	</p>
 			</div>
 
 			 <div class="child-footer location">
-				 <h3>VISIT US</h3>
+				 <h1>VISIT US</h1>
 				 <p>#102-3375 Kingsway
 					Vancouver, B.C. 
 					V5R 5K6  </p>
 			</div>
 
 			 <div class="child-footer contact">
-				 <h3 >CONTACT US</h3>
+				 <h1>CONTACT US</h1>
 				 <p>(604) 738-0678</p>
 				 <p>
 				 	<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
@@ -119,10 +119,10 @@
 			 </div>
 
 			 <div class="child-footer mailing-list">
-				 <label><h3>GET THE DIRT</h3></label>
+				 <label fo ="newsletter">GET THE DIRT</label>
 				 <p>No spam. Just great content.</p>
-				 <input type="text" id="email" name="email" placeholder='name@domain.com'>
-				 <button aria-label="type email address" type="button" class="btn-submit">→</button>
+				 <input aria-label="type email address" type="text" id="email" name="email" placeholder='name@domain.com'>
+				 <button aria-label="submit" type="button" class="btn-submit">→</button>
 			 </div>
 	 	</footer>
 
