--- a/shop-services.html
+++ b/shop-services.html
@@ -51,10 +51,6 @@
 		            	
 	      </nav>
 
-            	  <!-- <div class="grid-col-1of6 search-bar">
-							<input type="text" id="search" name="search" placeholder="Search...">
-            	  </div> -->
-
 		</header>
 
 		<!----- Introduction----->
@@ -93,20 +89,20 @@
 		<!----- Footer----->
 		 <footer class="main-footer grid">
 			 <div class="child-footer about">
-				 <h3>ABOUT FOUR SEASONS FLORAL</h3>
+				 <h1>ABOUT FOUR SEASONS FLORAL</h1>
 				 <p>We are a family-owned and full-service floral shop based in Vancouver, BC. that creates bespoke floral arrangements.
 			 	</p>
 			</div>
 
 			 <div class="child-footer location">
-				 <h3>VISIT US</h3>
+				 <h1>VISIT US</h1>
 				 <p>#102-3375 Kingsway
 					Vancouver, B.C. 
 					V5R 5K6  </p>
 			</div>
 
 			 <div class="child-footer contact">
-				 <h3 >CONTACT US</h3>
+				 <h1>CONTACT US</h1>
 				 <p>(604) 738-0678</p>
 				 <p>
 				 	<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
@@ -117,10 +113,10 @@
 			 </div>
 
 			 <div class="child-footer mailing-list">
-				 <label><h3>GET THE DIRT</h3></label>
+				 <label for="newsletter">GET THE DIRT</label>
 				 <p>No spam. Just great content.</p>
-				 <input type="text" id="email" name="email" placeholder='name@domain.com'>
-				 <button aria-label="type email address" type="button" class="btn-submit">→</button>
+				 <input aria-label="type email address"type="text" id="email" name="email" placeholder='name@domain.com'>
+				 <button aria-label="submit" type="button" class="btn-submit">→</button>
 			 </div>
 	 	</footer>
 
