--- a/shop.html
+++ b/shop.html
@@ -68,8 +68,8 @@
 					  	 <img src="img/products/red-bouquet.png" alt="Photo of Lover's Sunrise bouquet">
 					  	 	 <p class="product-name">Lover's Sunrise</p>
 						 	 <p class ="price">from $45.99</p>
-						 	 <a class ="btn-add" href="cart.html"> Add to cart </a>
 				 	</a>
+				 	 <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</div>
 
 				<div class ="product-item col-2of3">
@@ -77,8 +77,8 @@
 					  	 <img src="img/products/red-bouquet.jpg" alt="Photo of red bouquet">
 					  	  <p class="product-name">Radiantly Rouge</p>
 						  <p class ="price">from $55.99</p>
-						  <a class ="btn-add" href="cart.html"> Add to cart </a>
 					</a>
+					<a class ="btn-add" href="cart.html"> Add to cart </a>
 
 				</div>
 
@@ -86,9 +86,9 @@
 					<a href="detailed-product-2.html">
 					  	 <img src="img/products/light-pink-bouquet.jpg" alt="Photo of light pink bouquet">
 					  	  <p class="product-name">English Gardens</p>
-						  <p class ="price sale"><s class="old-price">from $48.99</s> from $44.99</p>
-						  <a class ="btn-add" href="cart.html"> Add to cart </a>
+						  <p class ="price sale"><del class="old-price">from $48.99</del> from $44.99</p>
 					</a>
+					  <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</div>
 
 			<div class ="product-item col-1of3">
@@ -96,8 +96,8 @@
 				  	 <img src="img/products/nemo-bouquet.jpg" alt="Photo of orange and blue bouquet">
 				  	  <p class="product-name">Just Keep Swimming</p>
 					  <p class ="price">from $45.99</p>
-					  <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</a>
+				  <a class ="btn-add" href="cart.html"> Add to cart </a>
 			</div>
 
 			<div class ="product-item col-2of3">
@@ -105,8 +105,8 @@
 				  	 <img src="img/products/lavender-bouquet.jpg" alt="Photo of purple bouquet">
 				  	  <p class="product-name">Lavender Dreams</p>
 					  <p class ="price">OUT OF STOCK</p>
-					  <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</a>
+				  <a class ="btn-add" href="cart.html"> Add to cart </a>
 			</div>
 
 			<div class ="product-item col-2of3">
@@ -114,8 +114,8 @@
 				  	 <img src="img/products/summer-bouquet.jpg" alt="Photo of yellow, pink and purple bouquet">
 				  	  <p class="product-name">Spirit of Summer</p>
 					  <p class ="price">from $44.99</p>
-					 <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</a>
+				  <a class ="btn-add" href="cart.html"> Add to cart </a>
 			</div>
 
 			<div class ="product-item col-2of3">
@@ -123,8 +123,8 @@
 				  	 <img src="img/products/violet-bouquet.jpg" alt="Photo of violet bouquet">
 				  	  <p class="product-name"> Very Violet</p>
 					  <p class ="price">from $39.99</p>
-					 <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</a>
+				  <a class ="btn-add" href="cart.html"> Add to cart </a>
 			</div>
 
 			<div class ="product-item col-2of3">
@@ -132,8 +132,8 @@
 				  	 <img src="img/products/pink-bouquet.jpg" alt="Photo of pink bouquet">
 				  	  <p class="product-name">Pretty In Pink</p>
 					  <p class ="price">from $36.99</p>
-					 <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</a>
+				  <a class ="btn-add" href="cart.html"> Add to cart </a>
 			</div>
 
 		</section>
@@ -141,20 +141,20 @@
 		<!----- Footer----->
 		 <footer class="main-footer grid">
 			 <div class="child-footer about">
-				 <h3>ABOUT FOUR SEASONS FLORAL</h3>
+				 <h1>ABOUT FOUR SEASONS FLORAL</h1>
 				 <p>We are a family-owned and full-service floral shop based in Vancouver, BC. that creates bespoke floral arrangements.
 			 	</p>
 			</div>
 
 			 <div class="child-footer location">
-				 <h3>VISIT US</h3>
+				 <h1>VISIT US</h1>
 				 <p>#102-3375 Kingsway
 					Vancouver, B.C. 
 					V5R 5K6  </p>
 			</div>
 
 			 <div class="child-footer contact">
-				 <h3 >CONTACT US</h3>
+				 <h1 >CONTACT US</h1>
 				 <p>(604) 738-0678</p>
 				 <p>
 				 	<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
@@ -165,10 +165,10 @@
 			 </div>
 
 			 <div class="child-footer mailing-list">
-				 <label><h3>GET THE DIRT</h3></label>
+				 <label for="newsletter">GET THE DIRT</label>
 				 <p>No spam. Just great content.</p>
-				 <input type="text" id="email" name="email" placeholder='name@domain.com'>
-				 <button aria-label="type email address" type="button" class="btn-submit">→</button>
+				 <input aria-label="type email address" type="text" id="email" name="email" placeholder='name@domain.com'>
+				 <button aria-label="submit" type="button" class="btn-submit">→</button>
 			 </div>
 	 	</footer>
 
