--- a/detailed-product-2.html
+++ b/detailed-product-2.html
@@ -61,7 +61,7 @@
 			</div>
 			<div class="product-desc">
 				<div class= "container-title">
-					<h2>Radiantly Rouge — from $55.99</h2>
+					<h1>Radiantly Rouge — from $55.99</h1>
 				</div>
 			  	<div class="stars">
 		              <p>&#9733; &#9733; &#9733; &#9733; &#9733; <a href="#review">(7)</a></p>
@@ -80,12 +80,13 @@
 				<form>
 					<label for="quantity">Quantity:</label>
 			  		<input type="text" id="quantity" name="quantity"><br>
-				</form>
-
 				<p>
 					This lovely red and white bunch features fuchsia carnations, red roses, red dahlias, white lilies and eucalyptus that can either be wrapped beautifully in recyclable paper or in a reusable glass vase.
 				</p>
-				<a href="cart.html"><button type="button" class="btn-main">Add to Cart</button></a>
+				<a class="btn-main" href="cart.html">Add to Cart</a>
+				</form>
+
+
 			</div> <!--.product-desc ends -->
 		</section><!--.grid.detailed-product ends -->
 
@@ -93,22 +94,19 @@
 		<!-- Review Section -->
 		 <section class="review" id="review">
 	      	  <h2> Reviews <a href="#post">(7)</a></h2>
-
-	      	  <!-- <button class="btn-main">Write a Review</button> -->
-
 	      	  <div class="review form">
 					<form action="/action_page.php">
 
 						<div class="personal-details">
-							<label for="name">Name</label>
+							<label for="fname">Name</label>
 							<input type="text" id="fname" name="fname" placeholder="Your full name">
 
-							<label for="email">Email</label>
-							<input type="text" id="email" name="email" placeholder='name@domain.com'>
+							<label for="email-review">Email</label>
+							<input type="text" id="#email-review" name="#email-review" placeholder='name@domain.com'>
 						</div>
 
 						<div class="rating">
-							<label for="rate">I rate it as:</label>
+							<label for="rate" id="rate">I rate it as:</label>
 							<div class="stars">
 					              <p>&#9733; &#9733; &#9733; &#9733; &#9733;</p>
 				           	</div>
@@ -188,10 +186,10 @@
 		 </div>
 
 		 <div class="child-footer mailing-list">
-			 <label><h3>GET THE DIRT</h3></label>
+			 <label for="newsletter">GET THE DIRT</label>
 			 <p>No spam. Just great content.</p>
-			 <input type="text" id="email" name="email" placeholder='name@domain.com'>
-			 <button aria-label="type email address" type="button" class="btn-submit">→</button>
+			 <input  aria-label="input email address" type="text" id="email" name="email" placeholder='name@domain.com'>
+			 <button aria-label="button submit" type="button" class="btn-submit">→</button>
 		 </div>
  	</footer>
 
