--- a/full-service-form-5of5.html
+++ b/full-service-form-5of5.html
@@ -63,9 +63,7 @@
 			</div>
 
 			<div class ="center">
-				<a href="index.html">
-					<button type="button" class="btn-main">RETURN HOME</button>
-				</a>
+				<a class="btn-main" href="index.html">RETURN HOME</a>
 			</div>
 
 		</section>
