--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
 		<section class ="home hero">
 			<div class="hero-text">
 				<h1>Spread happiness with summer's blooms.</h1>
-				<a href="shop.html">
-					<button type="button" class="btn-main"> Shop summer collection</button>
-				</a>
+				<a class="btn-main" href="shop.html">SHOP SUMMER COLLECTION</a>
 			</div>
 		</section>
 
@@ -87,9 +85,7 @@
 					<p>View Services →</p>
 				</a>
 			</div>
-		</div>
 		</section>
-
 
 
 		<!----- Alternating Content ----->
@@ -100,9 +96,7 @@
 			<div class ="alternating-content-text col-2of2">
 				<h2>Home grown.</h2>
 				<p>We source our flowers from local suppliers, lowering our carbon footprint and providing the freshest blooms to our customers.</p>
-				<a href="about.html">
-					<button type="button" class="btn-main">learn more</button>
-				</a>
+				<a class="btn-main" href="about.html">LEARN MORE</a>
 			</div>
 		</section>
 
@@ -111,9 +105,7 @@
 					<div class ="alternating-content-text col-1of2-right">
 						<h2>The gift of giving.</h2>
 						<p>Give one of nature’s gifts to the people who mean the most to you.</p>
-						<a href="shop.html">
-								<button type="button" class="btn-main">shop flowers</button>
-						</a>
+						<a class="btn-main" href="shop.html">SHOP FLOWERS</a>
 					</div>
 					<div class ="alternating-content-img col-2of2">
 						<img src="img/gift-of-giving.jpg" alt="Photo of bouquet of flowers being held by a woman">
@@ -148,10 +140,10 @@
 			 </div>
 
 			 <div class="child-footer mailing-list">
-				 <label><h3>GET THE DIRT</h3></label>
+				 <label for="newsletter">GET THE DIRT</label>
 				 <p>No spam. Just great content.</p>
-				 <input type="text" id="email" name="email" placeholder='name@domain.com'>
-				 <button aria-label="type email address" type="button" class="btn-submit">→</button>
+				 <input aria-label="type email address" type="text" id="email" name="email" placeholder='name@domain.com'>
+				 <button aria-label="submit" type="button" class="btn-submit">→</button>
 			 </div>
 	 	</footer>
 
