--- a/support.html
+++ b/support.html
@@ -77,7 +77,6 @@
 				    <li> Burnaby </li>
 					<li>Vancouver</li>
 				</ul>
-		      </p>
 		    </div>
 
 	    <button class="accordion">What if my choice of flowers aren't available?</button>
@@ -124,20 +123,20 @@
 	<!----- Footer----->
 	 <footer class="main-footer grid">
 		 <div class="child-footer about">
-			 <h3>ABOUT FOUR SEASONS FLORAL</h3>
+			 <h1>ABOUT FOUR SEASONS FLORAL</h1>
 			 <p>We are a family-owned and full-service floral shop based in Vancouver, BC. that creates bespoke floral arrangements.
 		 	</p>
 		</div>
 
 		 <div class="child-footer location">
-			 <h3>VISIT US</h3>
+			 <h1>VISIT US</h1>
 			 <p>#102-3375 Kingsway
 				Vancouver, B.C. 
 				V5R 5K6  </p>
 		</div>
 
 		 <div class="child-footer contact">
-			 <h3 >CONTACT US</h3>
+			 <h1 >CONTACT US</h1>
 			 <p>(604) 738-0678</p>
 			 <p>
 			 	<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
@@ -148,10 +147,10 @@
 		 </div>
 
 		 <div class="child-footer mailing-list">
-			 <label><h3>GET THE DIRT</h3></label>
+			 <label for="newsletter">GET THE DIRT</label>
 			 <p>No spam. Just great content.</p>
-			 <input type="text" id="email" name="email" placeholder='name@domain.com'>
-			 <button aria-label="type email address" type="button" class="btn-submit">→</button>
+			 <input aria-label="input email address" type="text" id="email" name="email" placeholder='name@domain.com'>
+			 <button aria-label="button submit" type="button" class="btn-submit">→</button>
 		 </div>
  	</footer>
 
